fix logo alignment

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -16,7 +16,7 @@ header {
   box-sizing: border-box;
   width: 100%;
   height: 80px;
-  padding: 5px;
+  padding: 5px 17px;
   background: rgba(255, 255, 255, 0.3);
   z-index: 1;
   transition: background 0.3s;
